--- a/Bioinformation/癌症基因组重测序.md
+++ b/Bioinformation/癌症基因组重测序.md
@@ -1,6 +1,6 @@
 [TOC]
 
-## 绪论
+# 绪论
 
 上帝语言的基本元素：$A, T, C, G$
 
@@ -16,7 +16,7 @@ graph LR
 	衍生 --- Protein["Protein(蛋白组)"]
 ```
 
-### 测序的概念
+## 测序的概念
 
 测序是对生命语言中的基本元素，及修饰和衍生物进行测定和解读
 
@@ -30,13 +30,13 @@ graph LR
 
 人类３０亿碱基
 
-### 第一代测序技术
+## 第一代测序技术
 
 - ABI
 
 基于第一代测序技术的人类基因组计划(HPG)
 
-### 高通量测序技术(NGS)
+## 高通量测序技术(NGS)
 
 - Roche
 - ***Illumina***
@@ -47,29 +47,29 @@ graph LR
 - Life Technologies
 - Complete Genomics
 
-### 第三代测序技术
+## 第三代测序技术
 
 - Pacific Biosciences
 
-### 高通量测序技术的应用
+## 高通量测序技术的应用
 
 - 无创产前检测
 - 个人基因检测
 - 癌症基因检测的个体化治疗
 
-### 癌症基因组测序
+## 癌症基因组测序
 
 - 癌症全基因组重测序
 - 癌症全外显子测序
 - 癌症基因靶向测序
 
-### 基因组测序能分析什么？
+## 基因组测序能分析什么？
 
 - 单碱基(SNV)及小片段(Indel)变异：外显子测序或者靶向测序
 - DNA拷贝数变异(CNV)
 - DNA结构变异(SV)
 
-### 基因组测序文章阅读分析套路
+## 基因组测序文章阅读分析套路
 
 1. 样本是什么？
 2. 测的什么？
