--- a/Bioinformation/生物信息学入门.md
+++ b/Bioinformation/生物信息学入门.md
@@ -4,11 +4,24 @@
 
 多序列比对（Multiple sequence alignment）是对两条以上的生物序列进行**全局比对**。
 
-多序列比对的主要用途：
+- 多序列比对的主要用途：
 
-1. **确认**：一个未知的序列是否属于某个家族
-2. **建立**：系统发生树，查询物种间或者序列间的关系
-3. **模式识别**：一些特别保守的序列片段往往对应重要的功能区域，通过多序列比对，可以找到这些保守片段
-4. **已知推未知**：把已知有特殊功能的序列片段通过多序列比对做成模型，然后根据该模型推测未知的序列片段是否也具有该功能
-5. **其他**：预测蛋白质/RNA二级结构等等
+  1. **确认**：一个未知的序列是否属于某个家族
+  2. **建立**：系统发生树，查询物种间或者序列间的关系
+  3. **模式识别**：一些特别保守的序列片段往往对应重要的功能区域，通过多序列比对，可以找到这些保守片段
+  4. **已知推未知**：把已知有特殊功能的序列片段通过多序列比对做成模型，然后根据该模型推测未知的序列片段是否也具有该功能
+  5. **其他**：预测蛋白质/RNA二级结构等等
 
+- 多序列比对算法
+
+  目前所有的多学列比对工具都不是完美的，它们都使用一种近似算法。为了是提高速度，损失一点精确度是值得的。
+
+- 对要进行多序列比对的序列的几点要求：
+
+  1. 太多的序列受不了。一般10-15条序列，最好不超过50条，序列太多任何软件都受不了！
+  2. 关系太远的序列受不了。两两之间系列相似度低于30%的一组序列，做多序列比对会有麻烦
+  3. 关系太近的序列受不了。两两之间序列相似度大于90%的序列，有再多条都等于**一条**
+  4. 短序列受不了。多序列比对支持一组一组差不多的序列，个别很短的序列属于捣乱分子
+  5. 有重复域的序列受不了。如果序列里包含重复域，大多数多序列对比都会出错，甚至崩溃
+
+  
