--- a/Bioinformation/生物信息学入门.md
+++ b/Bioinformation/生物信息学入门.md
@@ -127,4 +127,21 @@
 
 - 多序列对的编辑和发布
 
-  有了多序列比对后，我们需要对其"化妆"，才能见人。这里我们使用Jalview这个软件
+  |   名称   |                       网址                        |        特点        |
+  | :------: | :-----------------------------------------------: | :----------------: |
+  | JalView  |              http://www.jalview.org/              | JAVA，可以嵌入网页 |
+  | Boxshade | https://embnet.vital-it.ch/software/BOX_form.html |    擅长做黑白图    |
+  | ESPript  |      http://espript.ibcp.fr/ESPript/ESPript/      |     功能很强大     |
+  |  MView   |          https://desmid.github.io/mview/          | 擅长转化为HTML源码 |
+
+- 多序列比对的意义-**寻找保守区域！**
+
+  用一句话来描述你究竟想从多序列比对中获得什么的话，那就是寻找保守区域了！还记得之前我们提过的"\*"或":"表示的含义，因此在下图中我们关心的是"\*"和":"出现的区域，也就是保守区域。为了更好地寻找保守区域我们需要使用一些工具。
+
+  ![1534602260669](assets/1534602260669.png)
+
+  在介绍工具之前，我们先来介绍序列标识符(Sequence logo)，它是以图形的方式依次绘出序列比对种各个位置上出现的残基。每个位置上的残基的累计可以反映出该位置上的残基一致性。每个残基对应图形字符的大小与残基在该位置上出现的频率成正比。但图形字符的大小并不等于频率的百分比，而是经过简单统计计算后转化的结果。
+
+  一款流行的创建序列标识符的软件是WebLogo3（http://weblogo.threeplusone.com/）
+
+  
