--- a/Bioinformation/生物信息学入门.md
+++ b/Bioinformation/生物信息学入门.md
@@ -140,8 +140,22 @@
 
   ![1534602260669](assets/1534602260669.png)
 
-  在介绍工具之前，我们先来介绍序列标识符(Sequence logo)，它是以图形的方式依次绘出序列比对种各个位置上出现的残基。每个位置上的残基的累计可以反映出该位置上的残基一致性。每个残基对应图形字符的大小与残基在该位置上出现的频率成正比。但图形字符的大小并不等于频率的百分比，而是经过简单统计计算后转化的结果。
+  在介绍工具之前，我们先来介绍**序列标识符**(Sequence logo)，它是以图形的方式依次绘出序列比对种各个位置上出现的残基。每个位置上的残基的累计可以反映出该位置上的残基一致性。每个残基对应图形字符的大小与残基在该位置上出现的频率成正比。但图形字符的大小并不等于频率的百分比，而是经过简单统计计算后转化的结果。
 
   一款流行的创建序列标识符的软件是WebLogo3（http://weblogo.threeplusone.com/）
 
-  
+- 寻找保守区域
+
+  在核酸/蛋白质序列中存在有特定**模式**（pattern）的序列片段，这些片段称为序列的**基序**（motif）。序列基序与生物功能密切相关。
+
+  例如，N-糖基化位点基序（N-glycosylation site motif）总是符合以下特定模式：*Asn*
+
+  开始，然后紧跟除了*Pro*户外的任何一个氨基酸，再紧跟*Ser*或者*Thr*，再紧跟除*Pro*外的任何一个氨基酸。这个特定模式可以用**正则表达式**（Regular expression）来表达：
+
+  ```bash
+  N{P}[ST]{P}
+  ```
+
+  其中N=Asn，P=Pro，S=Ser，T=Thr；{X}表示除了X外的任意氨基酸；[XY]代表X或者Y。
+
+  **MEME**（http://meme-suite.org/）是一款可以自动从一组相关的DNA序列或蛋白质序列种发现序列基序的软件。
