--- a/Bioinformation/多序列比对.md
+++ b/Bioinformation/多序列比对.md
@@ -164,4 +164,4 @@
 
   一个蛋白质指纹（Prints）就是一句保守的序列基序，用于刻画蛋白质家族的特征。这些基序由多序列比对结果获得，且他们在氨基酸序列上是不相邻的，但是在三维结构中，他们可能紧密结合在一起的。
 
-  PRINTS是蛋白质序列指纹图谱数据库，储存了目前发现的绝大多数蛋白质家族的指纹图谱。对于一个陌生的蛋白质，只要看看它的序列是否符合某个家族的图谱就可以对它进行分类并预测它的功能。
+  PRINTS（http://www.bioinf.manchester.ac.uk/dbbrowser/PRINTS/）是蛋白质序列指纹图谱数据库，储存了目前发现的绝大多数蛋白质家族的指纹图谱。对于一个陌生的蛋白质，只要看看它的序列是否符合某个家族的图谱就可以对它进行分类并预测它的功能。
