--- a/Bioinformation/分子进化.md
+++ b/Bioinformation/分子进化.md
@@ -1,3 +1,29 @@
 # 分子进化
 
 分子进化是利用软件，从分子水平上（DNA，RNA，蛋白质序列）构建各种生物的系统发生树，其准确度依赖于软件的优劣及参数设置。
+
+最先由美国人Linus Pauling于1964年提出了分子进化的理论。他是基于某一个特定的分子在不同物种中的序列差异来构建系统发生树。他有两个基本假设：
+
+1. DNA，RNA或者蛋白质序列包含了物种的所有进化信息；
+2. 分子钟理论：一个特定的分子的进化变异的速度在不同物种中是基本恒定的。即两个分子的序列越相近，他们距离共同祖先就越近。
+
+##  不同的同源
+
+同源（Homologs）指的是来源于**共同祖先**的**相似序列**为同源序列。因此相似序列不一定是同源序列！
+
+- 直系同源（Orthologs）
+
+  来自于不同物种的，由垂直家系（物种形成）进化而来的基因。并且典型的保留了与原始基因相同的功能。
+
+- 旁系同源（Paralogs）
+
+  在同一物种中的来源于基因复制的基因，可能会进化出新的与原来有关的功能。
+
+- 异同源（Xenologs）
+
+  通过水平基因的转移，来源于 共生或病毒侵染所产生的相似基因。
+
+
+
+
+
