--- a/Bioinformation/孟德尔第一定律.md
+++ b/Bioinformation/孟德尔第一定律.md
@@ -1,3 +1,6 @@
+---
+abbrlink: '0'
+---
 ## 孟德尔遗传定律简介
 
 现代的遗传定律首先由**Mendel**在1865年提出。在此之前的遗传模型为**混合遗传**，也就是后代性状必须表现为其父母性状的混合。这个模型显然违反了人们的常识（比如两个较矮的父母会可能会生出比他们更高的后代）和统计学（随着时间的推移，混合特征会渐渐地融入平均）。
